--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,3 @@
-
-
-body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-color: #f4f4f4;
-}
-
 .container {
   text-align: center;
 }
@@ -19,13 +6,31 @@ h1 {
   color: #333;
 }
 
-.task-input-container {
+div {
   margin-bottom: 10px;
 }
 
-.task-input-container input {
+input[type="text"] {
   padding: 8px;
   margin-right: 5px;
+}
+
+.add-item {
+  padding: 8px;
+  cursor: pointer;
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+}
+
+.delete-item {
+  padding: 8px;
+  cursor: pointer;
+  background-color: #ff6464;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
 }
 
 .task-list {
@@ -39,9 +44,13 @@ h1 {
   margin-bottom: 5px;
 }
 
-.task-list li span {
-  flex-grow: 1;
-  cursor: pointer;
+.task-list li.completed {
+  text-decoration: line-through;
+  color: #888;
+}
+
+.task-list li input {
+  margin-right: 10px;
 }
 
 .task-list li button {
